modules/networking/9-elastic-ip.tf
resource "aws_eip" "nat_eip" {
  count  = var.az_count
  domain = "vpc"

  tags = {
    Name        = "${var.project_name}-${var.environment}-nat-eip-${count.index + 1}"
    Environment = var.environment
  }
}
